--- a/templates/base.html
+++ b/templates/base.html
@@ -1,70 +1,75 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='icon.ico') }}">  
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="icon"
+      type="image//x-icon"
+      href="static\favicon-DRUHC.ico"
+      sizes="32x32"
+    />
     <style>
-        .nav-item {
-          font-family: serif ;
-        }
+      .nav-item {
+        font-family: serif;
+      }
 
-        .title {
-            font-size: 40px;
-            font-family: serif;
-            text-align: center;
-            padding: 1em;
-        }
+      .title {
+        font-size: 40px;
+        font-family: serif;
+        text-align: center;
+        padding: 10px;
+      }
 
-        body {
-          background-color: rgb(177, 177, 177);
-        }
+      body {
+        background-color: rgb(226, 226, 226);
+      }
 
+      .container-fluid {
+        height: 150px;
+        margin-top: 5px;
+        min-height: 5vh; /* Set the container height to at least the viewport height */
+        display: flex;
+        flex-direction: column;
+      }
+
+      footer {
+        margin-top: auto; /* Push the footer to the bottom */
+        height: 90px;
+      }
     </style>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient"> 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar"> 
-          <div class="navbar-nav">
-            <a class="navbar-brand" href="#"></a>
-              <img src="https://www.mentoringpartnership.ca/wp-content/uploads/2022/06/DRUHC_Logo_2022-768x380.png" width="75" height="40" style="padding-right: 5px;">
-            <a class="nav-item nav-link" id="home" role="navigation" href="/">Home</a>
-            <a class="nav-item nav-link" id="dashboard" role="navigation" href="/dashboard">Dashboard</a> 
-            <a class="nav-item nav-link" id="signUp" role="navigation" href="/sign-up">Sign Up</a>
-            <a class="nav-item nav-link" id="login" role="navigation" href="/login">Login</a>
-            <a class="nav-item nav-link" id="logout" role="navigation" href="/logout">Logout</a>          
-          </div>
-        </div>
-    </nav>
+  </head>
+  <body>
+    {% include 'nav.html' %}
 
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-      {% for category, message in messages %}
-      {% if category == 'err' %}
-      <div class="alert alert-danger alert-dismissable fade show" role="alert">
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% else %}
-      <div class="alert alert-success alert-dismissable fade show" role="alert">
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages %} {% if category == 'err'
+    %}
+    <div class="alert alert-danger alert-dismissable fade show" role="alert">
+      {{message}}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alert-dismissable fade show" role="alert">
+      {{message}}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     <div class="container">
-      {% block content %}  
-      {% endblock %}
+      {% block content %} {% endblock %}
     </div>
+      {% include 'footer.html' %}
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -81,5 +86,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
