--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,16 @@
     <title>Home</title>
     <style>
       .lead {
-        font-size: 30px;
+        font-size: 28px;
         font-family: serif;
         text-align: left;
+        margin-top: 15px;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1 class="title" align="center">Interview Preparation</h1>
+    <h1 class="title" align="center">Interview Preparation</h1>
+    <div id="container">     
       <h2 class="lead">What we do</h2>
       <small class="text-body-secondary">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -30,7 +31,43 @@
         facilisis leo vel fringilla est ullamcorper. Nunc aliquet bibendum enim
         facilisis gravida. Ut tortor pretium viverra suspendisse potenti nullam.
         Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus.
-      </small>
+      </small>     
+    </div>
+    <div id="container">     
+      <h2 class="lead">Why this tool?</h2>
+      <small class="text-body-secondary">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Dictum at tempor
+        commodo ullamcorper a. Scelerisque in dictum non consectetur a erat nam
+        at lectus. Enim ut tellus elementum sagittis vitae et leo duis ut.
+        Faucibus ornare suspendisse sed nisi lacus. Suspendisse potenti nullam
+        ac tortor. Tincidunt dui ut ornare lectus sit. Diam phasellus vestibulum
+        lorem sed risus. Imperdiet massa tincidunt nunc pulvinar sapien. Velit
+        ut tortor pretium viverra suspendisse potenti nullam ac tortor.
+        Ultricies tristique nulla aliquet enim tortor at auctor. Faucibus vitae
+        aliquet nec ullamcorper sit amet risus. Enim praesent elementum
+        facilisis leo vel fringilla est ullamcorper. Nunc aliquet bibendum enim
+        facilisis gravida. Ut tortor pretium viverra suspendisse potenti nullam.
+        Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus.
+      </small>     
+    </div>
+    <div id="container">     
+      <h2 class="lead">How to use it</h2>
+      <small class="text-body-secondary">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Dictum at tempor
+        commodo ullamcorper a. Scelerisque in dictum non consectetur a erat nam
+        at lectus. Enim ut tellus elementum sagittis vitae et leo duis ut.
+        Faucibus ornare suspendisse sed nisi lacus. Suspendisse potenti nullam
+        ac tortor. Tincidunt dui ut ornare lectus sit. Diam phasellus vestibulum
+        lorem sed risus. Imperdiet massa tincidunt nunc pulvinar sapien. Velit
+        ut tortor pretium viverra suspendisse potenti nullam ac tortor.
+        Ultricies tristique nulla aliquet enim tortor at auctor. Faucibus vitae
+        aliquet nec ullamcorper sit amet risus. Enim praesent elementum
+        facilisis leo vel fringilla est ullamcorper. Nunc aliquet bibendum enim
+        facilisis gravida. Ut tortor pretium viverra suspendisse potenti nullam.
+        Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus.
+      </small>     
     </div>
   </body>
 </html>
