--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         background-color: rgb(226, 226, 226);
       }
 
-      .container-fluid {
+      #container-fluid {
         height: 150px;
         margin-top: 5px;
         min-height: 5vh; /* Set the container height to at least the viewport height */
@@ -39,9 +39,14 @@
         flex-direction: column;
       }
 
-      footer {
-        margin-top: auto; /* Push the footer to the bottom */
+      .footer {
         height: 90px;
+        position: relative;
+        bottom: 0;
+      }
+
+      .nav-footer {
+        text-align: center;
       }
     </style>
   </head>
@@ -69,7 +74,8 @@
     <div class="container">
       {% block content %} {% endblock %}
     </div>
-      {% include 'footer.html' %}
+    {% include 'footer.html' %}
+    
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
