--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-body-tertiary">
-  <footer class="py-3 my-4">
+<div class="container-fluid bg-body-tertiary footer">
+  <footer class="py-3 my-4 footer">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item">
         <a
@@ -8,28 +8,28 @@
           >Home</a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-footer" >
         <a
           target="_blank"  
           href="https://unemployedhelp.on.ca/jobs/"
           class="nav-link px-2 text-body-secondary"
           >Job Board</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-footer">
         <a
           target="_blank"
           href="https://unemployedhelp.on.ca/jobseeker/#services"
           class="nav-link px-2 text-body-secondary"
           >Services</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-footer">
         <a
           target="_blank"
           href="https://unemployedhelp.on.ca/contact/#et_pb_contact_form_0"
           class="nav-link px-2 text-body-secondary"
           >FAQs</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-footer">
         <a
           target="_blank"
           href="https://unemployedhelp.on.ca/contact/#et_pb_contact_form_0"
@@ -37,7 +37,7 @@
           >Contact</a>
       </li>
 
-      <li class="nav-item">
+      <li class="nav-item nav-footer">
         <a
           target="_blank"
           href="https://unemployedhelp.on.ca/about/"
