--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,8 @@
     <div id="container">     
       <h2 class="lead">What we do</h2>
       <small class="text-body-secondary">
+        This website should serve as a resource hub for job seekers. Plenty of 
+        strong resources can be found for various job roles.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Dictum at tempor
         commodo ullamcorper a. Scelerisque in dictum non consectetur a erat nam
